...
        <scene sceneID="TJd-Zf-dP2">
            <objects>
                <tabBarController storyboardIdentifier="home" id="2Ai-bY-qNs" customClass="CustomTabBarController" customModule="Middle_School_Management_App" customModuleProvider="target" sceneMemberID="viewController">
                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="WZv-cr-Uhp">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
...
            <objects>
                <navigationController id="TR6-nB-HpK" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="" image="calendar" catalog="system" id="2zU-wn-QaV"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="lBf-sV-Fxe">
                        <rect key="frame" x="0.0" y="59" width="393" height="44"/>
...
                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                <prototypes>
                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" restorationIdentifier="cell" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" rowHeight="201" id="8QX-GG-28P" customClass="ClassTableViewCell" customModule="Middle_School_Management_App" customMo
                                        <rect key="frame" x="0.0" y="50" width="393" height="201"/>
                                        <autoresizingMask key="autoresizingMask"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Schedule" id="2Ra-aL-0ji"/>
                    <connections>
                        <outlet property="todayDateLabel" destination="WEs-m3-URy" id="g1c-qV-n7X"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Notifications" id="KXU-7e-LBS"/>
                    <connections>
                        <outlet property="table" destination="4S4-2t-iG0" id="axr-Fj-E9U"/>
...
                                <nil key="highlightedColor"/>
                            </label>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Class code" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="xte-ib-vO5">
                                <rect key="frame" x="39" y="234" width="281" height="34"/>
                                <accessibility key="accessibilityConfiguration" label="Enter class code:"/>
...
                                <rect key="frame" x="39" y="284" width="56" height="35"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="filled" title="Join"/>
                                <connections>
                                    <action selector="tappedSubmit" destination="Zwm-Nh-T1a" eventType="touchUpInside" id="Yg1-la-J7j"/>
...
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" image="pip.exit" catalog="system" title="Sign out"/>
                                <connections>
                                    <action selector="tapToLogin:" destination="3YC-c3-JAH" eventType="touchUpInside" id="s0r-CF-TD7"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="My Profile" id="5tJ-sL-uYo"/>
                    <connections>
                        <outlet property="userEmailLabel" destination="eX9-Pv-UJu" id="h5q-ba-xJ0"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Events" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NXs-Le-S5O">
                                                    <rect key="frame" x="33" y="53" width="51" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Assignments" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3nT-Gw-JoK">
                                                    <rect key="frame" x="33" y="53" width="98" height="21"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
