...
       let alertsPrefKey = "alertsPref"
       let contentPrefKey = "contentPref"

    override func viewDidLoad() {
        super.viewDidLoad()
        
        title = "Notification Preferences"
        
        // Load initial switch states from UserDefaults
        switchNotif.isOn = UserDefaults.standard.bool(forKey: notifPrefKey)
        switchEvents.isOn = UserDefaults.standard.bool(forKey: eventsPrefKey)
        switchAssignments.isOn = UserDefaults.standard.bool(forKey: assignmentsPrefKey)
        switchAlerts.isOn = UserDefaults.standard.bool(forKey: alertsPrefKey)
...
