...
//    let updatedUser: User
//    let retrievedClass: Class
    let _id: String
//    let email: String
//    let schedule: Schedule?
//    let classes: [Class]
//    let notifications: [Notification]?
//
//    enum CodingKeys: String, CodingKey {
//        case message
//        case _id
//        case email
////        case hashedPassword
...
